--- a/ProyectoApiEF/appsettings.json
+++ b/ProyectoApiEF/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "cnTareas": "Data Source=(local); Initial Catalog=TareasDb; Trusted_Connection=True; Integrated Security=True; TrustServerCertificate=True"
+  }
 }
